-
Bug
-
Resolution: Done
-
P2: Important
-
5.8.0, 5.11.0, 6.2.0
-
None
-
Windows 10 x64
-
82357352b4 (qt/qtwebengine/dev)
[Problem]
Build and run the following official demo with command line arguments "-type=1"
Qt5.8.0\Examples\Qt-5.8\webenginewidgets\simplebrowser
then I get a crash. But if I change the option to "-typeeee=1" or sth. like "-typo=1", things are ok.
[Question]
We have a need to pass "-type=1" to our application but why the command line "-type=1" can cause the QtWebEngine to crash? Does "-type" is a hidden special option for WebEngine? I don't find any official docs to describe this option right now.
[Expected]
No crash at all, and -type is free to use if possible.
- relates to
-
QTBUG-102947 Windows: enable-logging switch opens a windows console
-
- Closed
-
- resulted in
-
QTBUG-107502 [Reg 6.3.2 -> 6.4.0] Qt WebEngine --remote-debugging-port no longer works
-
- Closed
-
| For Gerrit Dashboard: QTBUG-68820 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 376704,7 | Introduce "--webEngineArgs" to prevent unexpected sub-process args | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |