tests/auto/util/quickutil.h
@@ -172,10 +172,11 @@ inline QString activeElementId(QQuickWebEngineView *webEngineView)
 int main(int argc, char *argv[]) \
 { \
     QtWebEngineQuick::initialize(); \
-    \
     QList<const char *> w_argv(argc); \
+    QLatin1String arg("--webEngineArgs"); \
     for (int i = 0; i < argc; ++i) \
         w_argv[i] = argv[i]; \
+    w_argv.append(arg.data()); \
     for (int i = 0; i < params.size(); ++i) \
         w_argv.append(params[i].data()); \
     int w_argc = w_argv.size(); \
